commander/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http
      protocol: TCP
  selector:
    app: redis-commander
  type: LoadBalancer
