commander/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander
  annotations:
    cert-manager.io/cluster-issuer: staging
    kubernetes.io/ingress.class: ingress-nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issue-temporary-certificate: "true"
    certmanager.k8s.io/cluster-issuer: staging
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: redis-commander.azure.dev.app.vaticy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander
                port:
                  number: 8081
  tls:
    - hosts:
        - redis-commander.azure.dev.app.vaticy.com
      secretName: secret-test-dev-app-vaticy-com
